# mes_drone_project

./: .gitignore  .gitmodules  Dockerfile  README.md
cpp/: CMakeLists.txt  ball_control.py  bridge.py  forward_video.py  hardware_sim.cpp  main_vision.cpp  manual_pilot.py  run_all.sh  test_vision
cpp/test_bench/: Makefile  actuator_module.h  drone_defs.h  main.cpp  processing_module.h  results_10ms.csv  results_300ms.csv  run_testbench  sensor_module.h
docker/: Dockerfile
pi/: controller.py  controller2.py  controller3.py  controller_example.py  controller_test.py  controller_test2.py  controller_test3.py
scripts/: camera_view.py
simulation/: run_sim.sh  sim_world.world
simulation/models/ball/: model.config  model.sdf
simulation/models/red_ball/: model.config  model.sdf
simulation/models/static_red_sphere/: model.config  model.sdf
